--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -16,8 +16,8 @@ jobs:
         uses: docker://jakzal/phpqa:php8.0-alpine
         with:
           args: /tools/phpunit --bootstrap tests/TestHelper.php tests/Zend/AllTests.php
-      # - name: PHPUnit 9 on php 8.1
-      #   uses: docker://jakzal/phpqa:php8.1-alpine
-      #   with:
-      #     args: /tools/phpunit --bootstrap tests/TestHelper.php tests/Zend/AllTests.php
+      - name: PHPUnit 9 on php 8.1
+        uses: docker://jakzal/phpqa:php8.1-alpine
+        with:
+          args: /tools/phpunit --bootstrap tests/TestHelper.php tests/Zend/AllTests.php
           
