--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -12,12 +12,16 @@ jobs:
           fetch-depth: 0
       - name: Prevent entrypoint issue on load docker image jakzal/phpqa:php8.0-alpine 
         run: mv composer.json composer.json.bk
+      - name: PHPUnit 9 on php 8.1
+        uses: docker://jakzal/phpqa:php8.1-alpine
+        with:
+          args: /tools/phpunit --bootstrap tests/TestHelper.php tests/Zend/AllTests.php
       - name: PHPUnit 9 on php 8.0
         uses: docker://jakzal/phpqa:php8.0-alpine
         with:
           args: /tools/phpunit --bootstrap tests/TestHelper.php tests/Zend/AllTests.php
-      - name: PHPUnit 9 on php 8.1
-        uses: docker://jakzal/phpqa:php8.1-alpine
+      - name: PHPUnit 9 on php 7.4
+        uses: docker://jakzal/phpqa:php7.4-alpine
         with:
           args: /tools/phpunit --bootstrap tests/TestHelper.php tests/Zend/AllTests.php
           
