--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -27,19 +27,8 @@ jobs:
       - name: Validate composer
         run: composer validate --strict
 
-      - name: Get composer cache directory
-        id: composer-cache
-        run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
-
-      - name: Cache dependencies
-        uses: actions/cache@v2
-        with:
-          path: ${{ steps.composer-cache.outputs.dir }}
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
-          restore-keys: ${{ runner.os }}-composer-
-
       - name: Install dependencies
-        run: composer install --prefer-dist --no-progress --ignore-platform-req=ext-*
+        run: composer install --prefer-dist --no-progress
 
       - name: PHPCodeSniffer
-        run: php bin/phpcs -s -p --report=full --standard=.github/workflows/phpcs-ruleset.xml library
+        run: php bin/phpcs -s --report=full --standard=.github/workflows/phpcs-ruleset.xml library
