--- a/composer.json
+++ b/composer.json
@@ -45,11 +45,7 @@
     },
     "scripts": {
         "lint": "parallel-lint --exclude vendor --exclude tests/Zend/Loader/_files/ParseError.php .",
-        "test-new": "@php ./tests/runalltests.php",
-        "test": [
-            "Composer\\Config::disableProcessTimeout",
-            "phpunit --bootstrap tests/TestHelper.php tests/Zend/AllTests.php"
-        ]
+        "test": "@php ./tests/runalltests.php"
     },
     "autoload-dev": {
         "psr-0": {
