--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
     depends_on:
-      - mysql
+      - mariadb
       - memcached
     volumes:
       - .:/app
@@ -19,8 +19,8 @@ services:
     #    tty: true
     #    stdin_open: true
     user: "${DOCKER_COMPOSE_RUN_AS_USER:?You must export DOCKER_COMPOSE_RUN_AS_USER for permissions handling, look at README.md}"
-  mysql:
-    image: mysql:5.6
+  mariadb:
+    image: mariadb:10.6
     hostname: mysql
     environment:
       MYSQL_ROOT_PASSWORD: ''
