--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,10 @@
     },
     "scripts": {
         "lint": "parallel-lint --exclude vendor --exclude tests/Zend/Loader/_files/ParseError.php .",
-        "test": "phpunit -d memory_limit=-1 --bootstrap tests/TestHelper.php tests/Zend/AllTests.php"
+        "test": [
+            "Composer\\Config::disableProcessTimeout",
+            "phpunit --bootstrap tests/TestHelper.php tests/Zend/AllTests.php"
+        ]
     },
     "autoload-dev": {
         "psr-0": {
