--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
     "homepage": "http://framework.zend.com/",
     "license": "BSD-3-Clause",
     "require": {
-        "php": ">=8.1",
-        "symfony/polyfill-php81": "^1.24",
-        "symfony/polyfill-ctype": "^1.27",
-        "symfony/polyfill-mbstring": "^1.26"
+        "php": ">=8.2",
+        "symfony/polyfill-php82": "1.28",
+        "symfony/polyfill-ctype": "1.28",
+        "symfony/polyfill-mbstring": "1.28"
     },
     "suggest": {
         "ext-mbstring": "Multibyte strings handling"
