--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "framework",
         "zf1"
     ],
-    "homepage": "http://framework.zend.com/",
+    "homepage": "https://github.com/Shardj/zf1-future",
     "license": "BSD-3-Clause",
     "require": {
         "php": ">=7.1",
@@ -37,8 +37,9 @@
     "require-dev": {
         "phpunit/phpunit": "^7|^8|^9",
         "php-parallel-lint/php-parallel-lint": "^1.3",
-        "rector/rector": "^0.12.19",
-        "yoast/phpunit-polyfills": "2.0"
+        "rector/rector": "^1.2",
+        "yoast/phpunit-polyfills": "^2.0",
+        "friendsofphp/php-cs-fixer": "^3.60"
     },
     "archive": {
         "exclude": ["/demos", "/documentation", "/tests"]
