--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3",
         "php-parallel-lint/php-parallel-lint": "^1.3",
+        "phpcompatibility/php-compatibility": "dev-develop",
         "phpstan/phpstan": "^1.4 || ^2.0",
         "phpunit/phpunit": "^7|^8|^9",
         "rector/rector": "0.12.19 || ^1.2 || ^2.0",
@@ -37,7 +38,14 @@
         "library/"
     ],
     "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "phpstan/extension-installer": true
+        },
         "bin-dir": "bin",
+        "platform": {
+            "php": "7.1.3"
+        },
         "sort-packages": true
     },
     "extra": {
@@ -55,6 +63,7 @@
         "lint": "parallel-lint --exclude vendor --exclude tests/Zend/Loader/_files/ParseError.php .",
         "php-cs-fixer:test": "bin/php-cs-fixer fix --dry-run --diff",
         "php-cs-fixer:fix": "bin/php-cs-fixer fix",
+        "phpcs": "bin/phpcs -s -p --standard=.phpcs.dist.xml --cache=.phpcs.result.cache --report=full,summary",
         "phpstan": "XDEBUG_MODE=off php bin/phpstan analyze --configuration .phpstan.dist.neon",
         "phpstan:baseline": "XDEBUG_MODE=off php bin/phpstan analyze --configuration .phpstan.dist.neon -b .phpstan.dist.baseline.neon",
         "rector:test": "bin/rector process --config .rector.php --dry-run",
