--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -31,4 +31,4 @@ jobs:
         run: composer install --prefer-dist --no-progress --ignore-platform-req=ext-*
 
       - name: PHPCodeSniffer
-        run: php vendor/bin/phpcs -s -p --report=full --standard=.phpcs.dist.xml
+        run: php bin/phpcs -s -p --report=full --standard=.phpcs.dist.xml
