--- a/composer.json
+++ b/composer.json
@@ -10,19 +10,19 @@
     "homepage": "https://github.com/Shardj/zf1-future/",
     "license": "BSD-3-Clause",
     "require": {
-        "php": ">=7.1",
-        "symfony/polyfill-ctype": "^1.30",
-        "symfony/polyfill-mbstring": "^1.30",
-        "symfony/polyfill-php81": "^1.30",
-        "symfony/polyfill-php83": "^1.30"
+        "php": ">=7.4",
+        "symfony/polyfill-ctype": "^1.31",
+        "symfony/polyfill-mbstring": "^1.31",
+        "symfony/polyfill-php81": "^1.31",
+        "symfony/polyfill-php83": "^1.31"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3",
         "php-parallel-lint/php-parallel-lint": "^1.3",
         "phpcompatibility/php-compatibility": "dev-develop",
-        "phpstan/phpstan": "^1.4 || ^2.0",
-        "phpunit/phpunit": "^7|^8|^9",
-        "rector/rector": "0.12.19 || ^1.2 || ^2.0",
+        "phpstan/phpstan": "^2.0",
+        "phpunit/phpunit": "^9",
+        "rector/rector": "^2.0",
         "yoast/phpunit-polyfills": "^2.0"
     },
 
@@ -44,7 +44,7 @@
         },
         "bin-dir": "bin",
         "platform": {
-            "php": "7.1.3"
+            "php": "7.4"
         },
         "sort-packages": true
     },
