--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,9 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3",
         "php-parallel-lint/php-parallel-lint": "^1.3",
-        "phpstan/phpstan": "^1.4 || ^2.0",
-        "phpunit/phpunit": "^7|^8|^9",
-        "rector/rector": "0.12.19 || ^1.2 || ^2.0",
+        "phpstan/phpstan": "^2.0",
+        "phpunit/phpunit": "^9",
+        "rector/rector": "^2.0",
         "yoast/phpunit-polyfills": "^2.0"
     },
 
@@ -39,7 +39,10 @@
     ],
     "config": {
         "bin-dir": "bin",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     },
     "extra": {
         "branch-alias": {
@@ -57,7 +60,7 @@
         "php-cs-fixer:test": "bin/php-cs-fixer fix --dry-run --diff",
         "php-cs-fixer:fix": "bin/php-cs-fixer fix",
         "phpstan": "XDEBUG_MODE=off php bin/phpstan analyze --configuration .phpstan.dist.neon",
-        "phpstan:baseline": "XDEBUG_MODE=off php bin/phpstan analyze --configuration .phpstan.dist.neon -b .phpstan.dist.baseline.neon",
+        "phpstan:baseline": "XDEBUG_MODE=off php bin/phpstan analyze --configuration .phpstan.dist.neon -b .phpstan.dist.baseline.php",
         "rector:test": "bin/rector process --config .rector.php --dry-run",
         "rector:fix": "bin/rector process --config .rector.php",
         "test": [
