--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "php-parallel-lint/php-parallel-lint": "^1.3",
         "phpcompatibility/php-compatibility": "dev-develop",
         "phpstan/phpstan": "^2.0",
+        "phpstan/phpstan-phpunit": "^2.0",
         "phpunit/phpunit": "^9",
         "rector/rector": "^2.0",
         "yoast/phpunit-polyfills": "^2.0"
@@ -65,6 +66,7 @@
         "php-cs-fixer:test": "bin/php-cs-fixer fix --dry-run --diff",
         "php-cs-fixer:fix": "bin/php-cs-fixer fix",
         "phpcs": "bin/phpcs -s -p --standard=.phpcs.dist.xml --cache=.phpcs.result.cache --report=full,summary",
+        "phpcbf": "bin/phpcbf -s -p --standard=.phpcs.dist.xml --cache=.phpcs.result.cache --report=full,summary",
         "phpstan": "XDEBUG_MODE=off php bin/phpstan analyze --configuration .phpstan.dist.neon",
         "phpstan:baseline": "XDEBUG_MODE=off php bin/phpstan analyze --configuration .phpstan.dist.neon -b .phpstan.dist.baseline.php",
         "rector:test": "bin/rector process --config .rector.php --dry-run",
